# march-madness

./: .gitignore  blog_post.md  gen_submission.py  gen_submission_offdef.py  gen_womens_viz.py  implementation_summary_off_def.md  main.py  pyproject.toml  regenerate_figures.py  run_offdef_pipeline.py  run_sims_and_submit.py
.github/workflows/: daily-update.yml  mens-update.yml  womens-update.yml
data/kaggle/: MNCAATourneySeeds.csv  MNCAATourneySlots.csv  WNCAATourneySeeds.csv  WNCAATourneySlots.csv  WRegularSeasonCompactResults.csv
docs/specs/: 04_dashboard_offdef_updates.md
notebooks/: 01_eda.py  02_model.py  03_validation.py
results/: advancement_probs.csv  advancement_probs_mens.csv  advancement_probs_womens.csv  champions.json  champions_mens.json  champions_womens.json  validation_predictions.csv  validation_results.json
src/: data.py  export.py  model.py  pool.py  results.py  simulate.py  submission.py  validate.py  visualize.py
tests/: test_data.py  test_export.py  test_model.py  test_pool.py  test_results.py  test_simulate.py  test_submission.py
